Done with original assignment, Working on Multi-user support

--- a/2-basic-browser-javascript/index.html
+++ b/2-basic-browser-javascript/index.html
@@ -9,10 +9,23 @@
     <script src="./main.js"></script>
   </head>
   <body>
+
+    <div class="loginPage">
+      <div class="frm">
+        <div id="wlcm">Welcome</div></br>
+        <input id="login" type="text" name="login" placeholder="Login"></br>
+        <input id="password" type="text" name="password" placeholder="Password"></br></br>
+        <input id="sbmt" type="submit">
+        <input id="new" type="submit" value="New user">
+      </div>
+    </div>
+
+    <div class="main">
     <div class="app">
       <div class="header">
-        <div class="headComp headLeft">
-        </div>
+        <button id="logout" class="headComp">
+          LOGOUT
+        </button>
        <div id="total" class="headComp"> Total: 0</div>
         <button id="reset" class="headComp">
             RESET
@@ -49,5 +62,6 @@
         Made w/ &lt;3 @ FastTrack'D
       </div>
     </div>
+  </div>
   </body>
 </html>
